--- a/index.html
+++ b/index.html
@@ -132,6 +132,47 @@
   <!-- End of card block -->
 
 
+              <!-- Repeat this block for each card -->
+  <a href="https://t.me/bountybay_bot/deals?startapp=invite-17776dd95" class="card">
+    <div class="card-header">
+      <img src="icons/bountybay.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Bounty Bay</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +200K</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+                  <!-- Repeat this block for each card -->
+  <a href="https://t.me/treasure_tapper_bot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/treasure.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Treasure Tapper</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +300K</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+                      <!-- Repeat this block for each card -->
+  <a href="https://t.me/GleamRewardsBot/app?startapp=cmM9MTAwNzBkNWQ" class="card">
+    <div class="card-header">
+      <img src="icons/gleam.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Gleam</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +500K</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
           <!-- Repeat this block for each card -->
   <a href="http://t.me/grandcombat_bot/start?startapp=sG2Ye2Jel7" class="card">
     <div class="card-header">
@@ -400,7 +441,7 @@
       <span class="card-name">Major</span>
     </div>
     <div class="card-info">
-<div>Total Players: +2M</div>
+<div>Total Players: +7M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
             <img src="verify.svg" class="verify">
     </div>
