--- a/index.html
+++ b/index.html
@@ -1803,7 +1803,7 @@
 <div class="elfsight-app-d1a48ab8-1b3b-4356-b2d5-9e6eee10efc9" data-elfsight-app-lazy></div>
 </div> 
 
-<p align="center" style="color:white;"> @Cointapz copyright all rights reserved </p>
+<p align="center" class="copyright"> @Cointapz copyright all rights reserved </p>
 
 <div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.svg" width="24" height="24"></div>
 
