--- a/index.html
+++ b/index.html
@@ -1728,10 +1728,12 @@
 
 
       <!-- Repeat this block for each card -->
-  <a href="https://t.me/Bcoin2048bot/app?startapp=ref_pCHBBjYCpNlSyJfUcPzTuaEH" class="card">
+  <a href="https://t.me/Bcoin2048bot/app?startapp=ref_pCHBBjYCpNlSyJfUcPzTuaEH" class="card" id="card2">
+
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       <img src="icons/bcoin.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">Bcoin</span>
+      <span class="card-name">Bcoin 2048</span>
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
