--- a/index.html
+++ b/index.html
@@ -1736,8 +1736,9 @@
       <span class="card-name">Bcoin 2048</span>
     </div>
     <div class="card-info">
-<div>Total Players: +100K</div>
+<div>Total Players: +5M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+      <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
