--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,7 @@
     <div class="card-info">
 <div>Total Players: +5M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+      <img src="verify.svg" class="verify">
     </div>
   </a>
   <!-- End of card block -->
