--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
       <span class="card-name">Tapcoins</span>
     </div>
     <div class="card-info">
-<div>Total Players: +500K</div>
+<div>Total Players: +3M</div>
       <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
     </div>
   </a>
