--- a/index.html
+++ b/index.html
@@ -83,7 +83,82 @@
   <div class="card-container" id="card-container"  >
 
 
+<!-- Repeat this block for each card -->
+  <a href="https://t.me/dogshouse_bot/join?startapp=dUq8Cc6HRYWHpfX06a9kyQ" class="card" id="card2">
+  <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+    <div class="card-header">
+      <img src="icons/dogs.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Dogs</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +5M</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
 
+
+    <!-- Repeat this block for each card -->
+  <a href="http://t.me/muskempire_bot/game?startapp=hero6299245973" class="card" id="card2">
+  <div class="icon"><img src="trend.svg" width="32" height="32"></div>
+    <div class="card-header">
+      <img src="icons/muskempire.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Musk Empire</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +3M</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/winkogametokenbot/play/?start=6299245973" class="card">
+  
+    <div class="card-header">
+      <img src="icons/winko.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Winko</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="http://t.me/token1win_bot/start?startapp=refId6299245973" class="card">
+  
+    <div class="card-header">
+      <img src="icons/1win.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">1Win</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +200K</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+    
+
+<!-- Repeat this block for each card -->
+  <a href="https://t.me/boom?start=MLPMDdkpgoMTPZN5EkYNYJ" class="card">
+  
+    <div class="card-header">
+      <img src="icons/boomcoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Boom Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+    
 
       <!-- Repeat this block for each card -->
   <a href="https://t.me/MatchQuestBot/start?startapp=b2e4d5cb0f8790a690f0420b13c5fcb0" class="card">
