--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
   <div class="card-container" id="card-container"  >
 
 
+
+
+<!-- Repeat this block for each card -->
+  <a href="http://t.me/sphynxmeme_bot/bless?startapp=vEzwjQ6U" class="card">
+  
+    <div class="card-header">
+      <img src="icons/sphynx.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Sphynx</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +1M</div>
+      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+    
+
 <!-- Repeat this block for each card -->
   <a href="https://t.me/dogshouse_bot/join?startapp=dUq8Cc6HRYWHpfX06a9kyQ" class="card" id="card2">
   <div class="icon"><img src="trend.svg" width="32" height="32"></div>
