--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +100K</div>
-      <div class="active-section"><img src="active.svg" class="live"><b>Active</b></div>
+      <div class="active-section"><img src="scam.svg" class="live"><b>Scam</b></div>
     </div>
   </a>
   <!-- End of card block -->
