--- a/cg.html
+++ b/cg.html
@@ -225,7 +225,7 @@ font-weight: bold;
 
 
     <div class="header">
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="cglogo.png" alt="Logo" class="logo">
         <p class="title">Cryptocurrency Glossary Of Terms & Acronyms</p>
         <input type="search" class="searchbox" id="searchInput" placeholder="Search...">
 <div class="alphabet-buttons">
