--- a/glossary/index.html
+++ b/glossary/index.html
@@ -86,7 +86,7 @@ backdrop-filter: blur(10px);
         .main-section {
             display: flex;
             padding: 20px;
-            margin-top: 200px;
+            margin-top: 240px;
 	    flex-direction: column;
         }
         .big-letter {
@@ -414,9 +414,9 @@ position: relative;
 		  <li><a href="#googtrans(en|zh-CN)" class="lang-es lang-select" data-lang="zh-CN"><img src="china.png" alt="Chinese" width="24px"></a></li>
 		  <li><a href="#googtrans(en|de)" class="lang-es lang-select" data-lang="de"><img src="germany.png" alt="German" width="24px"></a></li>
 		  <li><a href="#googtrans(en|hi)" class="lang-es lang-select" data-lang="hi"><img src="india.png" alt="Hindi" width="24px"></a></li>
-		  <li><a href="#googtrans(en|ar)" class="lang-es lang-select" data-lang="ar"><img src="Arabic.png" alt="Arabic" width="24px"></a></li>
+		  <li><a href="#googtrans(en|ar)" class="lang-es lang-select" data-lang="ar"><img src="arabic.png" alt="Arabic" width="24px"></a></li>
 		  <li><a href="#googtrans(en|pt)" class="lang-es lang-select" data-lang="pt"><img src="purtugal.png" alt="Portuguese" width="24px"></a></li>
-		  <li><a href="#googtrans(en|ru)" class="lang-es lang-select" data-lang="ru"><img src="Russian.png" alt="Russian" width="24px"></a></li>
+		  <li><a href="#googtrans(en|ru)" class="lang-es lang-select" data-lang="ru"><img src="russian.png" alt="Russian" width="24px"></a></li>
 		</ul>
 	  </li>
 	</ul>
