--- a/glossary/index.html
+++ b/glossary/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
+
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -15,11 +17,15 @@
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@300;700;900&display=swap");
 		@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
-	
+	@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-	
+
+
 input:focus {
     outline: none;
+	border: 1px solid #67a8ff;
+    background: #fffdfb;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
         body {
@@ -37,7 +43,8 @@ background-size: 400px 400px;
             top: 0;
             left: 0;
             width: 100%;
-    background-color: rgb(44 119 231 / 90%);
+background: rgb(31,76,142);
+background: linear-gradient(0deg, rgba(31,76,142,1) 0%, rgba(64,121,205,80%) 100%);
             text-align: center;
             padding: 10px 0;
 backdrop-filter: blur(10px);
@@ -64,7 +71,7 @@ backdrop-filter: blur(10px);
             position: absolute; /* Change to "absolute" */
             left: 0;
             width: 100%;
-    background-color: rgb(44 119 231 / 90%);
+background-color: rgb(31 76 142);
             display: flex;
             justify-content: center;
             padding: 14px 0;
@@ -93,8 +100,8 @@ backdrop-filter: blur(10px);
         }
         .big-letter {
 		  font-family: "Exo 2", sans-serif;
-color:#5499ff;
-            font-size: 48px;
+color:#0071f3;
+            font-size: 54px;
             font-weight: bold;
             margin-right: 20px;
         }
@@ -110,7 +117,7 @@ color:#5499ff;
     font-weight: bold;
 }
 
-.section-description {
+.section-description {	  
     color: #313131;
     border-left: 2px solid #0071f3;
     padding-left: 14px;
@@ -123,7 +130,9 @@ color:#5499ff;
 /* Add hover effect */
 .section:hover {
     transition: all 0.4s ease-in-out;
-    box-shadow: -12px -8px 40px rgba(70, 70, 70, 0.12) inset;
+   /* box-shadow: -12px -8px 40px rgba(70, 70, 70, 0.12) inset;  */
+	
+	box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
     border: 1px solid #2aa0ff;
 }
 
@@ -131,7 +140,11 @@ color:#5499ff;
 .title {
             color: #ffffff;
     font-size: 1.2rem;
-	    margin-top: 2rem;
+  font-family: "Baloo 2", sans-serif;
+  font-optical-sizing: auto;
+      margin: 0.5rem;
+	  padding-top: 1rem;
+
 }
 
 
@@ -154,16 +167,15 @@ color:#5499ff;
   line-height: 24px;
 margin: 0.3rem;
   outline: 2px solid transparent;
-    padding: 0.1rem 0.5rem;
+    padding: 0.1rem 0.8rem;
   text-align: center;
   text-transform: none;
   transition: all .1s cubic-bezier(.4, 0, .2, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  box-shadow: -6px 8px 10px rgba(81,41,10,0.1),0px 2px 2px rgba(81,41,10,0.2);
-width: 28px;
-    justify-content: space-around;
+    box-shadow: -6px 8px 10px rgb(10 38 81 / 10%), 0px 2px 2px rgb(14 10 81 / 20%);width: 28px;
+justify-content: center;
 }
 
 .button-83:active {
@@ -218,7 +230,7 @@ padding-left: 1rem;
     bottom: 0;
     right: 0;
     opacity: 0;
-    transition: opacity 0.3s ease; /* Add a smooth transition effect */
+   /*  transition: opacity 0.3s ease;  Add a smooth transition effect */
 }
 
 /* Show icons on hover */
@@ -270,9 +282,11 @@ position: fixed;
 	text-align: center;
 	padding-top: 0;
   z-index:200;
+  
+  
 }
 .ct-language__dropdown li{
-	background: #2e70d3;
+	background: #2757a0;
 	padding: 5px;
 }
 .ct-language__dropdown li a{
@@ -301,16 +315,17 @@ position: fixed;
 	border: 0 solid transparent;
 	border-right-width: 8px;
 	border-left-width: 8px;
-	border-bottom: 8px solid #2e70d3;
+	border-bottom: 8px solid #2757a0;
 }
 .ct-language{
 position: relative;
-    background: #2e70d3;
+    background: #2757a0;
     color: #fff;
     padding: 6px;
     border-radius: 1rem;
 	    margin-top: 3rem;
-}
+		
+box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;}
 .ct-language:hover .ct-language__dropdown{
 	max-height: 1000px;
 	padding-top: 8px;
