--- a/glossary/index.html
+++ b/glossary/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Extended+Text&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 
 	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!--<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	
 	    <title>Cointapz Glossary</title>
 	
@@ -20,6 +23,28 @@
 	@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 
+.fa, .fas {
+    font-weight: 900;
+    font-size: x-small;
+}
+
+
+.copyright{
+  font-family: "Libre Barcode 39 Extended Text", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  text-align:center;
+  padding: 1rem;
+  font-Size: 28px;
+    text-decoration: none;
+	Color: gray;
+}
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+	color: gray;
+}
 
 input:focus {
     outline: none;
@@ -38,19 +63,20 @@ background-image: url("paper.jpg"); background-repeat: repeat;
 background-size: 400px 400px;
 
         }
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-background: rgb(31,76,142);
-background: linear-gradient(0deg, rgba(31,76,142,1) 0%, rgba(64,121,205,80%) 100%);
-            text-align: center;
-            padding: 10px 0;
-backdrop-filter: blur(10px);
+.header {
+    z-index: 9999999999;
+    background-color: #FFFFFF;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%232331C1' stroke-width='25' stroke-opacity='0.2'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E"), linear-gradient(0deg, rgba(31,76,142,1) 0%, rgba(64,121,205,80%) 100%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    backdrop-filter: blur(10px);
     transition: transform 0.3s ease; /* Add this line */
+}
 
-        }
         .logo {
             max-width: 100px;
             margin-top: 3rem;
@@ -99,10 +125,12 @@ backdrop-filter: blur(10px);
 	    flex-direction: column;
         }
         .big-letter {
-		  font-family: "Exo 2", sans-serif;
+  font-family: "Monoton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  
 color:#0071f3;
             font-size: 54px;
-            font-weight: bold;
             margin-right: 20px;
         }
 .section {
@@ -230,7 +258,7 @@ padding-left: 1rem;
     bottom: 0;
     right: 0;
     opacity: 0;
-   /*  transition: opacity 0.3s ease;  Add a smooth transition effect */
+	transition: all 0.25s ease-in-out;
 }
 
 /* Show icons on hover */
@@ -260,6 +288,7 @@ padding-left: 1rem;
 
 
 .ct-topbar {
+    z-index: 9999999999;
 position: fixed;
     top: 2px;
     /* left: 10px; */
@@ -3112,7 +3141,7 @@ A zParachain is an approach to bridging where a dedicated blockchain in the broa
 
 
 
-
+<div class="copyright">  <a href="https://t.me/cointapz"> @cointapz copyright  </a> </div>
 
 
 
@@ -3229,6 +3258,19 @@ window.addEventListener("scroll", function() {
     }
 
     prevScrollPos = currentScrollPos;
+});
+
+
+
+$(document).ready(function(){
+    $(".ct-language").click(function(event){
+        event.stopPropagation();
+        $(".ct-language__dropdown").toggle();
+    });
+
+    $(document).click(function() {
+        $(".ct-language__dropdown").hide();
+    });
 });
 
 
