--- a/glossary/index.html
+++ b/glossary/index.html
@@ -64,7 +64,7 @@ background-size: 400px 400px;
 
         }
 .header {
-    z-index: 9999999999;
+    z-index: 9999999999;  
     background-color: #FFFFFF;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%232331C1' stroke-width='25' stroke-opacity='0.2'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E"), linear-gradient(0deg, rgba(31,76,142,1) 0%, rgba(64,121,205,80%) 100%);
     position: fixed;
@@ -288,7 +288,7 @@ padding-left: 1rem;
 
 
 .ct-topbar {
-    z-index: 9999999999;
+/*    z-index: 9999999999;  */
 position: fixed;
     top: 2px;
     /* left: 10px; */
@@ -352,7 +352,7 @@ position: relative;
     color: #fff;
     padding: 6px;
     border-radius: 1rem;
-	    margin-top: 3rem;
+	    margin-top: 4rem;
 		
 box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;}
 .ct-language:hover .ct-language__dropdown{
@@ -3141,7 +3141,7 @@ A zParachain is an approach to bridging where a dedicated blockchain in the broa
 
 
 
-<div class="copyright">  <a href="https://t.me/cointapz"> @cointapz copyright  </a> </div>
+<div class="copyright notranslate">  <a href="https://t.me/cointapz"> @cointapz copyright  </a> </div>
 
 
 
