--- a/glossary/index.html
+++ b/glossary/index.html
@@ -413,7 +413,7 @@ box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rg
 
 
     <div class="header">
-        <img src="cglogo.png" alt="Logo" class="logo">
+        <img src="logo.svg" alt="Logo" class="logo">
         <p class="title">Cryptocurrency Glossary Of Terms & Acronyms</p>
         <input type="search" class="searchbox" id="searchInput" placeholder="Search...">
 		
