--- a/glossary/index.html
+++ b/glossary/index.html
@@ -38,6 +38,7 @@
   font-Size: 28px;
     text-decoration: none;
 	Color: gray;
+	bottom: 0;
 }
 
 a:hover, a:visited, a:link, a:active
@@ -3141,7 +3142,7 @@ A zParachain is an approach to bridging where a dedicated blockchain in the broa
 
 
 
-
+	<div class="copyright notranslate">  <a href="https://t.me/cointapz"> @cointapz copyright  </a> </div>
 
 
 
@@ -3277,6 +3278,6 @@ $(document).ready(function(){
 </script>
 
 
-	<div class="copyright notranslate">  <a href="https://t.me/cointapz"> @cointapz copyright  </a> </div>
+
 </body>
 </html>
